# react-test

./: .gitignore  config-overrides.js  package-lock.json  package.json
src/: App.js  ChildArea.js  index.js
wasm/: Cargo.toml
wasm/pkg/: index.d.ts  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts  package.json  wasm.d.ts  wasm.js  wasm_bg.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
wasm/src/: lib.rs
